--- a/Code/Forecasting with GRUs.ipynb
+++ b/Code/Forecasting with GRUs.ipynb
@@ -27,11 +27,11 @@
    },
    "outputs": [],
    "source": [
-    "%%bash\n",
-    "mkdir jena_climate\n",
-    "cd jena_climate\n",
-    "wget https://s3.amazonaws.com/keras-datasets/jena_climate_2009_2016.csv.zip\n",
-    "unzip jena_climate_2009_2016.csv.zip"
+    "#%%bash\n",
+    "#mkdir jena_climate\n",
+    "#cd jena_climate\n",
+    "#wget https://s3.amazonaws.com/keras-datasets/jena_climate_2009_2016.csv.zip\n",
+    "#unzip jena_climate_2009_2016.csv.zip"
    ]
   },
   {
@@ -57,6 +57,7 @@
     "from matplotlib import pyplot as plt\n",
     "from keras.models import Sequential\n",
     "from keras import layers\n",
+    "from keras.layers import Input\n",
     "from keras.optimizers import RMSprop"
    ]
   },
@@ -81,7 +82,7 @@
    },
    "outputs": [],
    "source": [
-    "data_dir = '/content/jena_climate'\n",
+    "data_dir = '/Users/dotero/Documents/TEC/Cursos/Bloque Integrador/2024/MA3001B/Code/jena_climate'\n",
     "fname = os.path.join(data_dir, 'jena_climate_2009_2016.csv')\n",
     "f = open(fname)\n",
     "data = f.read()\n",
@@ -294,7 +295,8 @@
    "outputs": [],
    "source": [
     "model = Sequential()\n",
-    "model.add(layers.GRU(32, input_shape=(None, float_data.shape[-1])))\n",
+    "model.add(Input(shape=(None, float_data.shape[-1])))\n",
+    "model.add(layers.GRU(32))\n",
     "model.add(layers.Dense(1))\n",
     "model.compile(optimizer=RMSprop(), loss='mae')\n",
     "\n",
@@ -345,12 +347,12 @@
    "outputs": [],
    "source": [
     "model = Sequential()\n",
-    "model.add(layers.GRU(32, dropout=0.2, recurrent_dropout=0.2,\n",
-    "                             input_shape=(None, float_data.shape[-1])))\n",
+    "model.add(Input(shape=(None, float_data.shape[-1])))\n",
+    "model.add(layers.GRU(32, dropout=0.2, recurrent_dropout=0.2))\n",
     "model.add(layers.Dense(1))\n",
     "model.compile(optimizer=RMSprop(), loss='mae')\n",
     "\n",
-    "history = model.fit_generator(train_gen, steps_per_epoch=500, epochs=40,\n",
+    "history = model.fit_generator(train_gen, steps_per_epoch=500, epochs=10,\n",
     "                                      validation_data=val_gen,\n",
     "                                      validation_steps=val_steps)"
    ]
@@ -400,14 +402,13 @@
    "outputs": [],
    "source": [
     "model = Sequential()\n",
-    "model.add(layers.GRU(32, dropout=0.1, recurrent_dropout=0.5,\n",
-    "                     return_sequences=True,\n",
-    "                     input_shape=(None, float_data.shape[-1])))\n",
+    "model.add(Input(shape=(None, float_data.shape[-1])))\n",
+    "model.add(layers.GRU(32, dropout=0.1, recurrent_dropout=0.5, return_sequences=True))\n",
     "model.add(layers.GRU(64, activation='relu', dropout=0.1, recurrent_dropout=0.5))\n",
     "model.add(layers.Dense(1))\n",
     "model.compile(optimizer=RMSprop(), loss='mae')\n",
     "\n",
-    "history = model.fit(train_gen, steps_per_epoch=500, epochs=40,\n",
+    "history = model.fit(train_gen, steps_per_epoch=500, epochs=10,\n",
     "                              validation_data=val_gen,\n",
     "                              validation_steps=val_steps)"
    ]
